--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">AutoWallpaperChanger</string>
-    <string name="appwidget_text">EXAMPLE</string>
+    <string name="app_name">WallpaperChanger</string>
+    <string name="appwidget_text">WallpaperChanger</string>
     <string name="add_widget">Add widget</string>
     <string name="title_activity_settings">Settings</string>
 
